fix: Fix the bug that scrollbar is always in the right

--- a/src/pages/Japan/MuniList/index.css
+++ b/src/pages/Japan/MuniList/index.css
@@ -28,7 +28,7 @@
 
 .municipalitiesList {
   width: 100%;
-  max-height: calc(100vh - 200px);
+  max-height: calc(100vh - 240px);
   overflow-y: auto;
   background: rgba(255, 255, 255, 0.9);
   border-radius: 8px;
